[gd_scene load_steps=7 format=2]

[ext_resource path="res://Things/Player/Player.png" type="Texture" id=1]
[ext_resource path="res://Things/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Things/Player/Truster.png" type="Texture" id=3]
[ext_resource path="res://Utils/WrapAround.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.01157
height = 11.5106

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 5, 0.59, 0, 1, 1, 1, 1, 0 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Visual" type="Node2D" parent="."]
position = Vector2( 0, -5 )

[node name="Sprite" type="Sprite" parent="Visual"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
texture = ExtResource( 1 )

[node name="TrusterSprite" type="Sprite" parent="Visual"]
modulate = Color( 1.2, 1.2, 1.2, 1 )
position = Vector2( 0, 16 )
texture = ExtResource( 3 )
offset = Vector2( 0, 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2.56525 )
shape = SubResource( 1 )

[node name="FirePoint" type="Node2D" parent="."]
position = Vector2( 0, -15 )

[node name="Tween" type="Tween" parent="."]

[node name="TrusterFlareTween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="WrapAround" type="Node" parent="."]
script = ExtResource( 4 )
margin = 20

[node name="FireTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="TrusterParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, 20 )
z_index = -1
emitting = false
local_coords = false
emission_shape = 1
emission_sphere_radius = 4.87
gravity = Vector2( 0, 0 )
scale_amount = 2.0
color_ramp = SubResource( 2 )

[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
